修改悬浮按钮图标颜色：日间模式使用白色，夜间模式使用#191C1C

--- a/app/src/main/res/layout/fragment_grid.xml
+++ b/app/src/main/res/layout/fragment_grid.xml
@@ -26,6 +26,6 @@
         android:backgroundTint="@color/colorPrimary"
         app:borderWidth="0dp"
         android:src="@drawable/ic_filter_list"
-        app:tint="@android:color/white"
+        app:tint="@color/fab_icon_color"
         />
 </RelativeLayout>
