--- a/app/src/main/res/drawable/bg_splash.xml
+++ b/app/src/main/res/drawable/bg_splash.xml
@@ -5,9 +5,12 @@
             <solid android:color="@color/white" />
         </shape>
     </item>
-    <item >
-        <bitmap
-            android:gravity="center"
-            android:src="@drawable/iv_splash" />
+    <item>
+        <inset
+            android:drawable="@drawable/iv_splash"
+            android:insetLeft="25%"
+            android:insetTop="25%"
+            android:insetRight="25%"
+            android:insetBottom="25%" />
     </item>
 </layer-list>
