优化启动页插图显示，调整缩放比例为65%

--- a/app/src/main/res/drawable/bg_item_select_md3.xml
+++ b/app/src/main/res/drawable/bg_item_select_md3.xml
@@ -4,7 +4,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="8dp" />
-            <solid android:color="?attr/colorSurfaceContainerHigh" />
+            <solid android:color="#E5F8F8" />
         </shape>
     </item>
 </ripple>
