--- a/app/src/main/res/layout/item_search_word.xml
+++ b/app/src/main/res/layout/item_search_word.xml
@@ -1,11 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/item_root"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="2dp"
     android:layout_marginHorizontal="4dp"
     android:background="@drawable/shape_setting_sort_normal"
-    android:focusable="true">
+    android:clickable="true"
+    android:focusable="true"
+    android:foreground="?attr/selectableItemBackground"
+    android:minHeight="48dp">
 
     <TextView
         android:id="@+id/tvWord"
@@ -16,5 +20,8 @@
         android:padding="@dimen/dp_10"
         android:singleLine="true"
         android:textSize="14sp"
+        android:clickable="false"
+        android:focusable="false"
+        android:duplicateParentState="true"
         android:textColor="@color/text_foreground"/>
 </FrameLayout>
