--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -62,7 +62,7 @@
     <color name="disable_text">@color/md3_outline</color>
 
     <!--    带点透明度(e6 90/100不透明)的pop-->
-    <color name="bg_popup">@color/md3_surface</color>
+    <color name="bg_popup">#FFFFFF</color>
 
     <!--    制定颜色-->
     <!--    页面背景色,activity.fragment等-->
@@ -108,18 +108,31 @@
     <color name="gray_999">#999999</color>
 
     <!-- 搜索详情页左侧标签背景色 - 主色的低饱和度变体 -->
-    <color name="search_category_bg">#A5C0C0</color>
+    <color name="search_category_bg">#E5F8F8</color>
 
     <!-- 菜单项背景色 - 日间模式使用浅灰色 -->
     <color name="menu_item_bg">@color/md3_surface_variant</color>
 
     <!-- 深色模式背景色 - 深灰色 -->
     <color name="color_232626">#232626</color>
+    <color name="color_dialog_bg_dark">#232626</color>
 
     <!-- 波纹效果颜色 - 日间模式 -->
     <color name="ripple_color">#1A006A6A</color>
 
     <!-- 底部导航栏活动指示器颜色 - 日间模式使用更淡的颜色 -->
     <color name="bottom_nav_indicator_light">#E5F8F8</color>
+
+    <!-- 详情页线路和选集未选中背景色 - 日间模式 -->
+    <color name="item_series_bg_light">#E6E9E9</color>
+
+    <!-- 倒序和全部按钮背景色 - 日间模式 -->
+    <color name="sort_all_button_bg_light">#4D5252</color>
+
+    <!-- 选中状态的文本颜色 - 日间模式 -->
+    <color name="selected_text_color_light">#FFFFFF</color>
+
+    <!-- 倒序和全部按钮图标颜色 - 日间模式 -->
+    <color name="sort_all_button_icon_light">#191C1C</color>
 
 </resources>
