--- a/app/src/main/res/values/styles_dialog.xml
+++ b/app/src/main/res/values/styles_dialog.xml
@@ -11,13 +11,16 @@
 
     <!-- Material Design 3 弹窗文本样式 - 日间模式 -->
     <style name="Widget.App.Dialog.TextView" parent="Widget.MaterialComponents.TextView">
-        <item name="android:textColor">@color/text_light_foreground</item>
+        <item name="android:textColor">?attr/colorOnSurfaceVariant</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineSpacingMultiplier">1.2</item>
     </style>
 
     <!-- Material Design 3 弹窗标题样式 - 日间模式 -->
     <style name="Widget.App.Dialog.Title" parent="Widget.MaterialComponents.TextView">
-        <item name="android:textColor">@color/text_light_foreground</item>
-        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">?attr/colorOnSurface</item>
+        <item name="android:textSize">20sp</item>
         <item name="android:textStyle">bold</item>
+        <item name="android:letterSpacing">0.0125</item>
     </style>
 </resources>
