--- a/app/src/main/res/drawable/bg_button_sort_all_m3.xml
+++ b/app/src/main/res/drawable/bg_button_sort_all_m3.xml
@@ -5,7 +5,7 @@
         <shape android:shape="rectangle">
             <corners android:radius="20dp" />
             <stroke android:color="?attr/colorOutline" android:width="1dp" />
-            <solid android:color="#232626" />
+            <solid android:color="@color/sort_all_button_bg_light" />
             <padding
                 android:bottom="10dp"
                 android:left="16dp"
