--- a/app/src/main/res/drawable/bg_splash.xml
+++ b/app/src/main/res/drawable/bg_splash.xml
@@ -6,11 +6,10 @@
         </shape>
     </item>
     <item>
-        <inset
+        <scale
             android:drawable="@drawable/iv_splash"
-            android:insetLeft="25%"
-            android:insetTop="25%"
-            android:insetRight="25%"
-            android:insetBottom="25%" />
+            android:scaleWidth="65%"
+            android:scaleHeight="65%"
+            android:scaleGravity="center" />
     </item>
 </layer-list>
