--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -228,7 +228,7 @@
 
                     <Space
                         android:layout_width="match_parent"
-                        android:layout_height="30dp" />
+                        android:layout_height="10dp" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -480,7 +480,7 @@
                         style="@style/Widget.App.Button.SortAndAll"
                         android:gravity="center"
                         android:textSize="24sp"
-                        android:textColor="#D2D4D4"
+                        android:textColor="@color/sort_all_button_icon_light"
                         android:fontFamily="@font/material_symbols_rounded"
                         android:text="@string/ms_compare_arrows"/>
 
@@ -496,7 +496,7 @@
                         style="@style/Widget.App.Button.SortAndAll"
                         android:gravity="center"
                         android:textSize="24sp"
-                        android:textColor="#D2D4D4"
+                        android:textColor="@color/sort_all_button_icon_light"
                         android:fontFamily="@font/material_symbols_rounded"
                         android:text="@string/ms_grid_view"/>
 
