--- a/app/src/main/res/layout/activity_search_detail.xml
+++ b/app/src/main/res/layout/activity_search_detail.xml
@@ -54,7 +54,7 @@
             android:id="@+id/rv_category"
             android:layout_width="120dp"
             android:layout_height="match_parent"
-            android:background="?attr/colorSurfaceVariant"
+            android:background="@color/search_category_bg"
             android:paddingVertical="2dp"
             android:clipToPadding="false"
             tools:listitem="@layout/item_search_category"/>
