--- a/app/src/main/res/layout/dialog_input_subscription_m3.xml
+++ b/app/src/main/res/layout/dialog_input_subscription_m3.xml
@@ -7,8 +7,7 @@
     android:orientation="vertical"
     android:paddingHorizontal="24dp"
     android:paddingTop="24dp"
-    android:paddingBottom="24dp"
-    android:background="@drawable/bg_dialog_md3">
+    android:paddingBottom="24dp">
 
     <LinearLayout
         android:layout_width="match_parent"
