--- a/app/src/main/res/layout/dialog_title_list_m3.xml
+++ b/app/src/main/res/layout/dialog_title_list_m3.xml
@@ -6,8 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:paddingHorizontal="24dp"
-    android:paddingVertical="24dp"
-    android:background="@drawable/bg_dialog_md3">
+    android:paddingVertical="24dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -24,7 +23,7 @@
             android:textStyle="bold"
             android:textColor="?attr/colorOnSurface"
             android:text="请选择"/>
-            
+
         <ImageView
             android:id="@+id/iv_use_tip"
             android:layout_width="24dp"
@@ -35,7 +34,7 @@
             android:clickable="true"
             android:focusable="true"/>
     </LinearLayout>
-    
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
         android:layout_width="match_parent"
