--- a/app/src/main/res/layout/item_select_flag.xml
+++ b/app/src/main/res/layout/item_select_flag.xml
@@ -6,13 +6,13 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
     app:hl_cornerRadius="8dp"
-    app:hl_layoutBackground="#232626"
+    app:hl_layoutBackground="@color/item_series_bg_light"
     app:hl_layoutBackground_true="?attr/colorPrimary"
     app:hl_shapeMode="selected"
     app:hl_strokeWith="0dp"
     app:hl_bindTextView="@+id/tvFlag"
     app:hl_textColor="?attr/colorOnSurfaceVariant"
-    app:hl_textColor_true="?attr/colorOnPrimary">
+    app:hl_textColor_true="@color/selected_text_color_light">
 
     <LinearLayout
         android:layout_width="wrap_content"
