--- a/app/src/main/res/layout/item_series.xml
+++ b/app/src/main/res/layout/item_series.xml
@@ -5,13 +5,12 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:hl_cornerRadius="8dp"
-    app:hl_layoutBackground="#333333"
-    app:hl_strokeWith="0.5dp"
-    app:hl_strokeColor="#33FFFFFF"
+    app:hl_layoutBackground="@color/item_series_bg_light"
+    app:hl_strokeWith="0dp"
     app:hl_layoutBackground_true="?attr/colorPrimary"
     app:hl_shapeMode="selected"
     app:hl_bindTextView="@+id/tvSeries"
-    app:hl_textColor_true="?attr/colorOnPrimary"
+    app:hl_textColor_true="@color/selected_text_color_light"
     app:hl_textColor="?attr/colorOnSurfaceVariant">
 
     <TextView
@@ -25,5 +24,5 @@
         android:paddingHorizontal="12dp"
         android:paddingVertical="12dp"
         android:textSize="18sp"
-        android:textColor="@android:color/white"/>
+        android:textColor="?attr/colorOnSurfaceVariant"/>
 </com.lihang.ShadowLayout>
