--- a/app/src/main/res/layout/activity_collect.xml
+++ b/app/src/main/res/layout/activity_collect.xml
@@ -12,7 +12,7 @@
         android:layout_height="60dp"
         app:title="收藏"
         app:lineVisible="false"
-        app:rightIcon="@drawable/ic_clear_m3"
+        app:rightIcon="@drawable/ic_delete_trash_m3"
         android:background="?attr/colorSurface"
         app:leftIcon="@drawable/ic_arrow_back_m3"
         app:titleColor="?attr/colorOnSurface"
