--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -19,7 +19,7 @@
             android:layout_gravity="bottom"
             android:layout_marginLeft="20dp"
             android:layout_marginBottom="4dp"
-            android:text="@string/app_name"
+            android:text="XMBOX"
             android:textColor="?attr/colorOnSurface"
             android:textSize="22sp"
             android:fontFamily="sans-serif-medium" />
