UI优化：1. 修复播放器设置弹窗样式 2. 统一倍速按钮大小 3. 调整订阅管理页面悬浮按钮位置

--- a/app/src/main/res/layout/activity_subscription.xml
+++ b/app/src/main/res/layout/activity_subscription.xml
@@ -49,8 +49,11 @@
         android:id="@+id/fab_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="16dp"
+        android:layout_gravity="bottom|center_horizontal"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="116dp"
         android:contentDescription="添加订阅"
         app:srcCompat="@drawable/ic_add_m3"
         app:tint="@color/fab_icon_color"
