--- a/app/src/main/res/drawable/bg_speed_button_selector.xml
+++ b/app/src/main/res/drawable/bg_speed_button_selector.xml
@@ -4,14 +4,14 @@
     <item android:state_selected="true">
         <shape android:shape="rectangle">
             <corners android:radius="8dp" />
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="?attr/colorPrimary" />
         </shape>
     </item>
     <!-- 未选中状态 -->
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="8dp" />
-            <stroke android:color="@color/colorPrimary" android:width="1dp" />
+            <stroke android:color="?attr/colorOutline" android:width="1dp" />
             <solid android:color="@android:color/transparent" />
         </shape>
     </item>
