--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -12,7 +12,7 @@
         android:layout_height="60dp"
         app:title="历史记录"
         app:leftTitleSize="16sp"
-        app:rightIcon="@drawable/ic_clear_m3"
+        app:rightIcon="@drawable/ic_delete_trash_m3"
         app:lineVisible="false"
         android:background="?attr/colorSurface"
         app:leftIcon="@drawable/ic_arrow_back_m3"
