--- a/app/src/mobile/res/layout/dialog_control.xml
+++ b/app/src/mobile/res/layout/dialog_control.xml
@@ -43,12 +43,10 @@
         android:valueFrom="0.5"
         android:valueTo="5"
         app:thumbColor="@color/accent"
-        app:thumbRadius="10dp"
-        app:tickVisible="true"
-        app:tickColor="@color/black_50"
+        app:thumbRadius="9dp"
+        app:tickVisible="false"
         app:trackColorActive="@color/accent"
-        app:trackColorInactive="@color/white_20"
-        app:trackHeight="6dp" />
+        app:trackColorInactive="@color/white_30" />
 
     <TextView
         android:id="@+id/parseText"
